--- a/src/blocks/listings-card/style.scss
+++ b/src/blocks/listings-card/style.scss
@@ -143,7 +143,8 @@
 
 	&__link {
 		display: inline-block;
-		padding: 0.75rem 1.5rem;
+		padding: 0.5rem 1.5rem;
+		font-size: 14px;
 		background: #0073aa;
 		color: #fff;
 		text-decoration: none;
