Updated Listing Details Block

--- a/src/blocks/listing-details/editor.scss
+++ b/src/blocks/listing-details/editor.scss
@@ -1,3 +1,15 @@
-.cb-listing-details {
+.cb-listing-single {
 	width: 100%;
+
+	.cb-listing-single__gallery-track {
+		pointer-events: none;
+	}
+
+	.cb-listing-single__gallery-arrow {
+		display: none;
+	}
+
+	.cb-listing-single__cta {
+		pointer-events: none;
+	}
 }
